OLD-YAML-REM/fanout-ingress-OLD.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - host: johncollins.ai
    http:
      paths:
      - path: /h-w
        pathType: ImplementationSpecific
        backend:
          service:
            name: h-w
            port:
              number: 8090
      - path: /foo
        pathType: ImplementationSpecific
        backend:
          service:
            name: foo
            port:
              number: 8080
